# 100-exercises-to-learn-rust

./: .gitignore  Cargo.toml
exercises/02_basic_calculator/03_if_else/src/: lib.rs
exercises/02_basic_calculator/04_panics/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/08_stack/src/: lib.rs
exercises/03_ticket_v1/09_heap/src/: lib.rs
exercises/03_ticket_v1/10_references_in_memory/src/: lib.rs
exercises/03_ticket_v1/11_destructor/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/01_trait/: Cargo.toml
exercises/04_traits/01_trait/src/: lib.rs
exercises/04_traits/02_orphan_rule/src/: lib.rs  main.rs
exercises/04_traits/03_operator_overloading/src/: lib.rs
exercises/04_traits/05_trait_bounds/src/: lib.rs
exercises/04_traits/06_str_slice/src/: lib.rs
exercises/05_ticket_v2/11_dependencies/: Cargo.toml
exercises/05_ticket_v2/12_thiserror/: Cargo.toml
exercises/05_ticket_v2/15_outro/: Cargo.toml
exercises/08_futures/08_outro/: .env.example  Cargo.toml  queries.http
exercises/08_futures/08_outro/migrations/: 20240709184837_create_tickets_table.up.sql
exercises/08_futures/08_outro/src/: data.rs  lib.rs  main.rs
exercises/08_futures/08_outro/src/db/: mod.rs  sqlite.rs
exercises/08_futures/08_outro/src/store/: mod.rs  with_db.rs
exercises/08_futures/08_outro/src/web/: end_points.rs  mod.rs
helpers/ticket_fields/src/: description.rs  title.rs
(+51 files in other folders)
